# twitterclone

./: .env  .env.dev  .env.production  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  render.yaml
.github/workflows/: ci.yml
staticfiles/css/: style.css
templates/: base_generic.html  register.html
templates/registration/: login.html
tweets/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_remove_follow_followed_follow_following_and_more.py  0003_tweet_parent_tweet_alter_follow_following_retweet_and_more.py
tweets/static/css/: style.css
tweets/templates/tweets/: create_tweet.html  feed.html  reply_to_tweet.html
twitterclone/: settings.py  urls.py
