[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Gabriela Quadros_do_Amaral <quadros.ga@hotmail.com>"]
readme = "README.md"
packages = [{include = "twitterclone"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.9"
