[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Gabriela Quadros_do_Amaral <quadros.ga@hotmail.com>"]
readme = "README.md"
packages = [{include = "twitterclone"}]

[tool.poetry.dependencies]
dj-database-url = "^2.0.0"
python = "^3.10"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.9"
djangorestframework = "^3.15.2"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.5.0"